<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- SwipeRefreshLayout must be the parent of a ListView or GridView but this seems to work -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_calendar_day_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/day_sunday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/day_monday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/day_tuesday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/day_wednesday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/day_thursday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/day_friday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/day_saturday"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_calendar_weeks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">
        </LinearLayout>
        <!--<Button-->
        <!--android:id="@+id/btn_new_event_activity"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:clickable="true"-->
        <!--android:focusable="true"-->
        <!--android:onClick="startNewEventActivity"-->
        <!--android:text="New Event"/>-->

        <!--<Button-->
        <!--android:id="@+id/btn_edit_event_activity"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:clickable="true"-->
        <!--android:focusable="true"-->
        <!--android:onClick="startEditEventActivity"-->
        <!--android:text="Edit Event"/>-->

        <!--<TextView-->
        <!--android:id="@+id/tv_json_log"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="15dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:padding="10dp"/>-->
    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>
